--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -2,6 +2,7 @@
   <div class="col-xs-12 text-right m-t-10 m-b-5" *ngIf="mode === 'edit'; else viewMode">
     <div *ngIf="isInternational && mode === 'edit'; else elseBlock" class="p-r-10 p-b-10">
       <div *ngIf="poCurrency && poCurrency.exchangeCurrencyName != null">
+        <span class="slideToggalColor p-r-10"><mat-slide-toggle [(ngModel)]="ratesBaseCurr" [ngModelOptions]="{standalone: true}"></mat-slide-toggle></span>
         <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
           <span class="font-size-vary-grn color-grey">
             <img width="25px" *ngIf="poCurrency.exchangeCurrencyFlag" [src]="poCurrency.exchangeCurrencyFlag" />
@@ -104,14 +105,22 @@
               class="mat-cell"
               [ngClass]="isInternational && mode === 'edit' ? 'minwidth-8' : 'minwidth-8'"
               [ngClass]="isInternational && mode === 'edit' && mode != 'edit' ? 'p-r-0' : 'p-r-15'"
-              >{{ getMaterialAmount(m) | number: "1.2-2" }}</span
+              >{{ ratesBaseCurr ? (getMaterialAmount(m) * poCurrency.exchangeValue | number: "1.2-2") : (getMaterialAmount(m) | number: "1.2-2") }}</span
             >
             <span
               class="mat-cell"
               [ngClass]="{'text-center': isInternational && mode !== 'edit'}"
               [ngClass]="isInternational && mode === 'edit' ? 'minwidth-8' : 'minwidth-8'"
               *ngIf="isInternational; else gstTotalBlock"
-              >{{ isInternational && mode === "edit" ? (getTotalPOListTax(m) | number: "1.2-2") : (this.poTableData[m].taxAmount | number: "1.2-2") }}
+              >{{
+                isInternational && mode === "edit"
+                  ? ratesBaseCurr
+                    ? (getTotalPOListTax(m) * poCurrency.exchangeValue | number: "1.2-2")
+                    : (getTotalPOListTax(m) | number: "1.2-2")
+                  : ratesBaseCurr
+                  ? (this.poTableData[m].taxAmount * poCurrency.exchangeValue | number: "1.2-2")
+                  : (this.poTableData[m].taxAmount | number: "1.2-2")
+              }}
               <span *ngIf="this.poTableData[m].taxInfo && this.poTableData[m].taxInfo.length" class="info-icon info-tootip"
                 ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
                 <span class="info-tootip__content">
@@ -128,7 +137,15 @@
               <span class="mat-cell minwidth-60-px"></span>
             </ng-template>
             <span class="mat-cell" [ngClass]="isInternational && mode === 'edit' ? 'minwidth-8' : 'minwidth-8'" *ngIf="isInternational; else gstTotalAmountBlock">
-              {{ isInternational && mode === "edit" ? (getTotalOtherCost(m) | number: "1.2-2") : (this.poTableData[m].otherCostAmount | number: "1.2-2") }}
+              {{
+                isInternational && mode === "edit"
+                  ? ratesBaseCurr
+                    ? (getTotalOtherCost(m) * poCurrency.exchangeValue | number: "1.2-2")
+                    : (getTotalOtherCost(m) | number: "1.2-2")
+                  : ratesBaseCurr
+                  ? (this.poTableData[m].otherCostAmount * poCurrency.exchangeValue | number: "1.2-2")
+                  : (this.poTableData[m].otherCostAmount | number: "1.2-2")
+              }}
               <span *ngIf="this.poTableData[m].otherCostInfo && this.poTableData[m].otherCostInfo.length" class="info-icon info-tootip"
                 ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
                 <span class="info-tootip__content">
@@ -144,7 +161,9 @@
             <ng-template #gstTotalAmountBlock>
               <span class="mat-cell text-left p-l-10 p-r-10">{{ getMaterialGstAmount(m) | number: "1.2-2" }}</span>
             </ng-template>
-            <span class="mat-cell" [ngClass]="isInternational && mode === 'edit' ? 'minwidth-8' : 'minwidth-8'">{{ getMaterialTotalAmount(m) | number: "1.2-2" }}</span>
+            <span class="mat-cell" [ngClass]="isInternational && mode === 'edit' ? 'minwidth-8' : 'minwidth-8'">{{
+              ratesBaseCurr ? (getMaterialTotalAmount(m) * poCurrency.exchangeValue | number: "1.2-2") : (getMaterialTotalAmount(m) | number: "1.2-2")
+            }}</span>
             <span class="mat-cell" [ngClass]="isInternational && mode === 'edit' ? 'minwidth-4' : 'minwidth-4'" *ngIf="isInternational && mode === 'edit' && mode === 'edit'"
               ><button mat-button matRipple class="btn btn-link taxButton p-0 main-color text-decoration-underline" (click)="openTaxesCostsDialog('taxesAndCost', m)">
                 Add Taxes & cost
@@ -197,9 +216,16 @@
                 </ng-template>
               </span>
               <span class="mat-cell" [ngClass]="isInternational && mode === 'edit' ? 'minwidth-8' : 'minwidth-8'">
-                <ng-container *ngIf="mode != 'edit'; else editAmount">{{ purchaseOrder.amount | number: "1.2-2" }} </ng-container>
+                <ng-container *ngIf="mode != 'edit'; else editAmount"
+                  >{{ ratesBaseCurr ? (purchaseOrder.amount * poCurrency.exchangeValue | number: "1.2-2") : (purchaseOrder.amount | number: "1.2-2") }}
+                </ng-container>
                 <ng-template #editAmount>
-                  {{ poForms["controls"]["forms"]["controls"][m]["controls"]["purchaseOrderDetailList"]["controls"][p]["controls"]["amount"].value | number: "1.2-2" }}
+                  {{
+                    ratesBaseCurr
+                      ? (poForms["controls"]["forms"]["controls"][m]["controls"]["purchaseOrderDetailList"]["controls"][p]["controls"]["amount"].value * poCurrency.exchangeValue
+                        | number: "1.2-2")
+                      : (poForms["controls"]["forms"]["controls"][m]["controls"]["purchaseOrderDetailList"]["controls"][p]["controls"]["amount"].value | number: "1.2-2")
+                  }}
                 </ng-template>
               </span>
               <span
@@ -208,7 +234,15 @@
                 [ngClass]="isInternational && mode === 'edit' ? 'minwidth-8' : 'minwidth-8'"
                 *ngIf="isInternational; else gstBlock"
               >
-                {{ isInternational && mode === "edit" ? (getPOListTax(m, p) | number: "1.2-2") : (this.poTableData[m].purchaseOrderDetailList[p].taxAmount | number: "1.2-2") }}
+                {{
+                  isInternational && mode === "edit"
+                    ? ratesBaseCurr
+                      ? (getPOListTax(m, p) * poCurrency.exchangeValue | number: "1.2-2")
+                      : (getPOListTax(m, p) | number: "1.2-2")
+                    : ratesBaseCurr
+                    ? (this.poTableData[m].purchaseOrderDetailList[p].taxAmount * poCurrency.exchangeValue | number: "1.2-2")
+                    : (this.poTableData[m].purchaseOrderDetailList[p].taxAmount | number: "1.2-2")
+                }}
               </span>
               <ng-template #gstBlock>
                 <span class="mat-cell">
@@ -250,9 +284,16 @@
                 </span>
               </ng-template>
               <span class="mat-cell" [ngClass]="isInternational && mode === 'edit' ? 'minwidth-8 p-l-13 p-r-0' : 'minwidth-8'">
-                <ng-container *ngIf="mode != 'edit'; else editTotal">{{ purchaseOrder.total | number: "1.2-2" }} </ng-container>
+                <ng-container *ngIf="mode != 'edit'; else editTotal"
+                  >{{ ratesBaseCurr ? (purchaseOrder.total * poCurrency.exchangeValue | number: "1.2-2") : (purchaseOrder.total | number: "1.2-2") }}
+                </ng-container>
                 <ng-template #editTotal>
-                  {{ poForms["controls"]["forms"]["controls"][m]["controls"]["purchaseOrderDetailList"]["controls"][p]["controls"]["total"].value | number: "1.2-2" }}
+                  {{
+                    ratesBaseCurr
+                      ? (poForms["controls"]["forms"]["controls"][m]["controls"]["purchaseOrderDetailList"]["controls"][p]["controls"]["total"].value * poCurrency.exchangeValue
+                        | number: "1.2-2")
+                      : (poForms["controls"]["forms"]["controls"][m]["controls"]["purchaseOrderDetailList"]["controls"][p]["controls"]["total"].value | number: "1.2-2")
+                  }}
                 </ng-template>
               </span>
               <span
@@ -268,7 +309,13 @@
             <div class="row">
               <div class="col-xs-10 p-r-70 p-t-10">
                 <span class="p-r-0">
-                  <span class="p-r-5"> {{ this.additonalCost.additionalOtherCostAmount | number: "1.2-2" }}</span>
+                  <span class="p-r-5">
+                    {{
+                      ratesBaseCurr
+                        ? (this.additonalCost.additionalOtherCostAmount * poCurrency.exchangeValue | number: "1.2-2")
+                        : (this.additonalCost.additionalOtherCostAmount | number: "1.2-2")
+                    }}</span
+                  >
                   <span *ngIf="this.additonalCost.additionalOtherCostInfo && this.additonalCost.additionalOtherCostInfo.length" class="info-icon info-tootip"
                     ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
                     <span class="info-tootip__content">
@@ -295,7 +342,13 @@
               <div class="col-xs-3 p-r-10 fontsize-15-px text-right">
                 <span class="p-r-0">
                   <span class="light-grey">Other Cost:</span>
-                  <span class="p-r-5 light-grey"> {{ this.additonalCost.additionalOtherCostAmount | number: "1.2-2" }}</span>
+                  <span class="p-r-5 light-grey">
+                    {{
+                      ratesBaseCurr
+                        ? (this.additonalCost.additionalOtherCostAmount * poCurrency.exchangeValue | number: "1.2-2")
+                        : (this.additonalCost.additionalOtherCostAmount | number: "1.2-2")
+                    }}</span
+                  >
                   <span *ngIf="this.additonalCost.additionalOtherCostInfo.length" class="info-icon info-tootip"
                     ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
                     <span class="info-tootip__content">
@@ -320,13 +373,19 @@
           <span class="mat-cell"></span>
           <span class="mat-cell"></span>
           <span class="mat-cell"
-            ><span *ngIf="isInternational"><span>Tax Amount </span> <br />{{ totalTaxAmount | number: "1.2-2" }}</span></span
+            ><span *ngIf="isInternational"
+              ><span>Tax Amount </span> <br />{{ ratesBaseCurr ? (totalTaxAmount * poCurrency.exchangeValue | number: "1.2-2") : (totalTaxAmount | number: "1.2-2") }}</span
+            ></span
           >
           <span class="mat-cell">
-            <span *ngIf="isInternational; else gstTotalAmount"> <span>Other Cost </span> <br />{{ totalOtherAmount | number: "1.2-2" }} </span>
-            <ng-template #gstTotalAmount> <span> GST Amount </span> <br />{{ gstTotalAmount | number: "1.2-2" }} </ng-template>
+            <span *ngIf="isInternational; else totalGstAmount">
+              <span>Other Cost </span> <br />{{ ratesBaseCurr ? (totalOtherAmount * poCurrency.exchangeValue | number: "1.2-2") : (totalOtherAmount | number: "1.2-2") }}
+            </span>
+            <ng-template #totalGstAmount> <span> GST Amount </span> <br />{{ gstTotalAmount | number: "1.2-2" }} </ng-template>
           </span>
-          <span class="mat-cell"><span>Total Amount </span> <br />{{ totalAmount | number: "1.2-2" }}</span>
+          <span class="mat-cell"
+            ><span>Total Amount </span> <br />{{ ratesBaseCurr ? (totalAmount * poCurrency.exchangeValue | number: "1.2-2") : (totalAmount | number: "1.2-2") }}</span
+          >
         </div>
         <div class="col-xs-12 text-right text-semi-bold m-t-10 p-r-35 font-size-vary-grn">
           Net Payable Amount in Words :Rupees {{ totalAmount | numberToWords | async | titlecase }} <span class="text-semi-bold">Only /-</span>
