--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -1,6 +1,6 @@
 <div class="page-start-point">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
-    <div class="row">
+    <div class="row p-t-20">
       <div class="col-sm-12 col-md-12 m-t-5 text-semi-bold text-left" *ngIf="this.mode === 'view'">
         PO is Approved by {{ this.poData.poStatusChangedBy }} on {{ this.poData.poStatusChangedOn | date: "dd-MMM-yyy" }}
 
