--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -17,7 +17,7 @@
           <div class="row m-b-10">
             <div class="col-xs-3">
               <mat-form-field class="border-input">
-                <input class="p-b-10" matInput type="text" formControlName="rfqName" placeholder="*RFQ Name" />
+                <input class="p-b-10" matInput type="text" formControlName="rfqName" placeholder="RFQ Name*" />
               </mat-form-field>
             </div>
             <!-- <div class="col-md-4">
