--- a/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
@@ -119,7 +119,7 @@
 
               <div class="col-sm-6">
                 <!-- country -->
-                <mat-form-field class="border-select mat-form-field-flex-mm-padding w-vw-17 ml-4">
+                <mat-form-field class="border-select mat-form-field-flex-mm-padding w-100 pl-4 pr-4 ml-1">
                   <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
                     <div class="display-flex">
                       <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Country"
