--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -79,7 +79,7 @@
                   <span
                     matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"><img
                       class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
-                    <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.name }}</span>
+                    <span class="p-r-5 color-brand font-size16">{{ selectedCountry && selectedCountry.name }}</span>
                     <!-- <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span> -->
                   </span>
                 </mat-select-trigger>
