--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -12,13 +12,13 @@
     <div class="row p-t-15 p-b-10">
       <div class="col-xs-12 display-flex supplier-dialog">
         <mat-form-field class="border-input">
-          <input matInput type="text" formControlName="supplier_name" placeholder="Supplier Name" />
+          <input matInput type="text" formControlName="supplier_name" placeholder="Supplier Name *" />
         </mat-form-field>
       </div>
 
       <div class="col-xs-12 display-flex supplier-dialog">
         <mat-form-field class="border-input">
-          <input matInput type="email" formControlName="email" placeholder="Email" />
+          <input matInput type="email" formControlName="email" placeholder="Email *" />
           <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched"
             class="form-error-msg"> Email is required </small>
           <small *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched"
@@ -61,7 +61,7 @@
 
         <div class="col-xs-10">
           <mat-form-field class="border-input">
-            <input matInput type="text" formControlName="contact_no" placeholder="Phone No." />
+            <input matInput type="text" formControlName="contact_no" placeholder="Phone No. *" />
             <small *ngIf="form.controls['contact_no'].hasError('required') && form.controls['contact_no'].touched"
               class="form-error-msg"> Phone No is required </small>
             <small *ngIf="form.controls['contact_no'].hasError('pattern') && form.controls['contact_no'].touched"
