--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -162,10 +162,8 @@
                 </ng-container>
 
                 <ng-container matColumnDef="PO Amount">
-                  <th mat-header-cell *matHeaderCellDef class="text-right">PO Amount ₹</th>
-                  <td mat-cell class="text-right" *matCellDef="let element">
-                    {{ element.poAmount | number: "1.2-2" }}
-                  </td>
+                  <th mat-header-cell *matHeaderCellDef class="text-right">PO Amount</th>
+                  <td mat-cell class="text-right" *matCellDef="let element">{{ element.poAmount | number: "1.2-2" }} {{ element.currencyCode }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="Action">
@@ -225,10 +223,8 @@
                 </ng-container>
 
                 <ng-container matColumnDef="PO Amount">
-                  <th mat-header-cell *matHeaderCellDef class="text-right">PO Amount ₹</th>
-                  <td mat-cell class="text-right" *matCellDef="let element">
-                    {{ element.poAmount | number: "1.2-2" }}
-                  </td>
+                  <th mat-header-cell *matHeaderCellDef class="text-right">PO Amount</th>
+                  <td mat-cell class="text-right" *matCellDef="let element">{{ element.poAmount | number: "1.2-2" }} {{ element.currencyCode }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="Action">
@@ -296,9 +292,7 @@
 
                 <ng-container matColumnDef="PO Amount">
                   <th mat-header-cell *matHeaderCellDef class="text-right">PO Amount ₹</th>
-                  <td mat-cell *matCellDef="let element" class="text-right">
-                    {{ element.poAmount | number: "1.2-2" }}
-                  </td>
+                  <td mat-cell *matCellDef="let element" class="text-right">{{ element.poAmount | number: "1.2-2" }} {{ element.currencyCode }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="Action">
