--- a/src/app/shared/dialogs/payment-record/paymentRecord.component.html
+++ b/src/app/shared/dialogs/payment-record/paymentRecord.component.html
@@ -14,18 +14,21 @@
   <div class="col-xs-12 p-t-20">
     <mat-card class="width78Percent gray-border" *ngIf="paymentDetail">
       <div class="row">
-        <div class="col-xs-5">Total PO Amount : {{ paymentDetail.poAmount ? (paymentDetail.poAmount | number: "1.2-2") : (0 | number: "1.2-2") }}</div>
-        <div class="col-xs-1 p-l-0">
-          <div class="info">
-            <mat-icon class="material-info-padding round-button color-white main-background-color">info</mat-icon>
-            <div id="infoIcon">
-              <div class="row">
-                <div class="col-sm-12">Total Amount : {{ paymentDetail.poAmount - paymentDetail.gstAmount | number: "1.2-2" }}</div>
-                <div class="col-sm-12">GST Amount : {{ paymentDetail.gstAmount ? (paymentDetail.gstAmount | number: "1.2-2") : (0 | number: "1.2-2") }}</div>
+        <div class="col-xs-6">
+          Total PO Amount : {{ paymentDetail.poAmount ? (paymentDetail.poAmount | number: "1.2-2") : (0 | number: "1.2-2") }}
+          <span class="info-icon info-tootip"
+            ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
+            <span class="info-tootip__content">
+              <div class="tooltip-table">
+                <p class="row mb-1">
+                  <span class="col-sm-12">Total Amount : {{ paymentDetail.poAmount - paymentDetail.gstAmount | number: "1.2-2" }}</span>
+                  <span class="col-sm-12">GST Amount : {{ paymentDetail.gstAmount ? (paymentDetail.gstAmount | number: "1.2-2") : (0 | number: "1.2-2") }}</span>
+                </p>
               </div>
-            </div>
-          </div>
+            </span>
+          </span>
         </div>
+
         <div class="col-xs-6">Amount Paid till date : {{ paymentDetail.paymentRecived ? (paymentDetail.paymentRecived | number: "1.2-2") : (0 | number: "1.2-2") }}</div>
       </div>
       <div class="row">
