--- a/src/app/shared/dialogs/add-address-po/add-addressPo.html
+++ b/src/app/shared/dialogs/add-address-po/add-addressPo.html
@@ -13,7 +13,7 @@
 
 <!-- class="mat-tab-add-address-modal-po" -->
 <div mat-dialog-content class="mat-tab-add-address-modal-po">
-  <mat-tab-group class="overflow-remove">
+  <mat-tab-group class="overflow-remove" (selectedTabChange)="tabClick($event)">
     <mat-tab label="Choose Address" class="addressDialog">
       <ng-container *ngIf="address && address[0].addressId > 0; else noAddress">
         <form *ngIf="address" [formGroup]="selectAddressFrm">
@@ -36,8 +36,7 @@
             </div>
           </div>
           <div class="pull-right p-t-5">
-            <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial
-              (click)="onselectAddress()">
+            <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial (click)="onselectAddress()">
               Save
             </button>
           </div>
@@ -55,17 +54,13 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6">
               <div class="row border-input">
-                <mat-form-field class="col-xs-12 ">
+                <mat-form-field class="col-xs-12">
                   <input matInput type="text" placeholder="Address Line 1" formControlName="addressLine1" />
                 </mat-form-field>
-                <small
-                  *ngIf="newAddressForm.controls['addressLine1'].hasError('required') && newAddressForm.controls['addressLine1'].touched"
-                  class="form-error-msg p-l-15">
+                <small *ngIf="newAddressForm.controls['addressLine1'].hasError('required') && newAddressForm.controls['addressLine1'].touched" class="form-error-msg p-l-15">
                   Address Line1 is required
                 </small>
-                <small
-                  *ngIf="newAddressForm.controls['addressLine1'].value.length > 120 && newAddressForm.controls['addressLine1'].touched"
-                  class="form-error-msg p-l-15">
+                <small *ngIf="newAddressForm.controls['addressLine1'].value.length > 120 && newAddressForm.controls['addressLine1'].touched" class="form-error-msg p-l-15">
                   Address should be less than 120 characters
                 </small>
               </div>
@@ -74,9 +69,7 @@
               <div class="row border-input p-t-0">
                 <mat-form-field class="col-xs-12">
                   <input matInput type="text" placeholder="Address Line 2" formControlName="addressLine2" />
-                  <small
-                    *ngIf="newAddressForm.controls['addressLine2'].value.length > 120 && newAddressForm.controls['addressLine2'].touched"
-                    class="form-error-msg p-l-15">
+                  <small *ngIf="newAddressForm.controls['addressLine2'].value.length > 120 && newAddressForm.controls['addressLine2'].touched" class="form-error-msg p-l-15">
                     Address should be less than 120 characters
                   </small>
                 </mat-form-field>
@@ -85,24 +78,60 @@
           </div>
           <div class="row">
             <div class="col-xs-6">
+              <!-- country -->
+              <mat-form-field class="border-select mat-form-field-infix-padding-top mat-form-field-flex-mm-padding mt6p width-100">
+                <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
+                  <div class="display-flex">
+                    <input
+                      class="p-l-10 p-b-5"
+                      matInput
+                      type="search"
+                      placeholder="Search Country"
+                      [(ngModel)]="searchCountry"
+                      [ngModelOptions]="{standalone: true}"
+                      (keydown)="$event.stopPropagation()"
+                    />
+                    <button mat-button matSuffix mat-icon-button>
+                      <mat-icon>search</mat-icon>
+                    </button>
+                  </div>
+                  <mat-select-trigger>
+                    <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
+                      ><img class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                      <span class="p-r-5 color-brand font-size16">{{ selectedCountry && selectedCountry.name }}</span>
+                      <!-- <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span> -->
+                    </span>
+                  </mat-select-trigger>
+                  <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'name'" [value]="country" selected="trade.isAttatched"
+                    ><span
+                      ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
+                      <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
+                      <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
+                    </span>
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div class="col-xs-6">
               <div class="row border-input p-t-0">
-                <mat-form-field class="col-xs-12 ">
-                  <input matInput type="string" (input)="getPincode($event)" placeholder="Pincode"
-                    formControlName="pinCode" />
+                <mat-form-field class="col-xs-12">
+                  <input matInput type="string" (input)="getPincode($event)" placeholder="Pincode" formControlName="pinCode" />
                 </mat-form-field>
                 <small
-                  *ngIf="newAddressForm.controls['pinCode'].hasError('required') && newAddressForm.controls['pinCode'].touched"
-                  class="form-error-msg p-l-15">
+                  *ngIf="newAddressForm.controls['pinCode'].hasError('required') && newAddressForm.controls['pinCode'].touched &&pincodeLength<=0"
+                  class="form-error-msg p-l-15"
+                >
                   Pincode is required
                 </small>
                 <!-- <small *ngIf="newAddressForm.controls['pinCode'].hasError('pattern') && newAddressForm.controls['pinCode'].touched"
                                     class="form-error-msg p-l-15"> Enter Valid Pincode</small> -->
-                <small *ngIf="newAddressForm.controls['pinCode'].touched && (!validPincode) && (pincodeLength>0)"
-                  class="error-msg p-l-15">
+                <small *ngIf="newAddressForm.controls['pinCode'].touched && (!validPincode) && (pincodeLength>0)" class="error-msg p-l-15">
                   Enter Valid Pincode
                 </small>
               </div>
             </div>
+          </div>
+          <div class="row">
             <div class="col-xs-6">
               <div class="row border-input p-t-0">
                 <mat-form-field class="col-xs-12">
@@ -111,36 +140,38 @@
                 </mat-form-field>
               </div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-xs-6">
               <div class="row border-input p-t-0">
-                <mat-form-field class="col-xs-12 ">
+                <mat-form-field class="col-xs-12">
                   <input matInput type="string" formControlName="city" placeholder="City" />
                 </mat-form-field>
               </div>
             </div>
+          </div>
+          <div class="row">
             <div class="col-xs-12 col-sm-6">
               <div class="row border-input p-t-0">
                 <mat-form-field class="col-xs-12">
                   <input matInput type="text" placeholder="GSTIN" formControlName="gstNo" />
                 </mat-form-field>
-                <small
-                  *ngIf="newAddressForm.controls['gstNo'].hasError('required') && newAddressForm.controls['gstNo'].touched"
-                  class="form-error-msg p-l-15">
+                <small *ngIf="newAddressForm.controls['gstNo'].hasError('required') && newAddressForm.controls['gstNo'].touched" class="form-error-msg p-l-15">
                   GSTIN is required
                 </small>
-                <small
-                  *ngIf="newAddressForm.controls['gstNo'].hasError('pattern') && newAddressForm.controls['gstNo'].touched"
-                  class="form-error-msg p-l-15">
-                  Enter Valid GSTIN</small>
+                <small *ngIf="newAddressForm.controls['gstNo'].hasError('pattern') && newAddressForm.controls['gstNo'].touched" class="form-error-msg p-l-15">
+                  Enter Valid GSTIN</small
+                >
               </div>
             </div>
           </div>
         </div>
-        <div class="pull-right">
-          <button mat-raised-button [disabled]="!newAddressForm.valid || (!validPincode)"
-            class="main-background-color main-button color-white m-b-5" cdkFocusInitial (click)="onAddAddress()">
+        <div class="col-xs-12 text-center p-t-10">
+          <button
+            mat-raised-button
+            [disabled]="!newAddressForm.valid || (!validPincode)"
+            class="main-background-color main-button color-white m-b-5"
+            cdkFocusInitial
+            (click)="onAddAddress()"
+          >
             Add
           </button>
         </div>
