alignment fix: RFQ page table

--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -144,7 +144,7 @@
                                   </ng-template>
                                 </span>
 
-                                <span class="col-sm-1 text-right margin-right">
+                                <span class="col-sm-2 p-l-20 text-left margin-right">
                                   {{
                                     brandInfo.materialUnitPrice != null
                                       ? ratesBaseCurr
