--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -5,40 +5,40 @@
         <div class="things-to-do bg-white mb-4 equal-height">
           <!-- <h5 class="mb-3">Things to do</h5> -->
           <div class="things-to-do__inner d-flex justify-content-between align-items-center">
-            <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor" (click)="openProject()" matTooltip="You can add your project details">
+            <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor" (click)="openProject()"
+              matTooltip="You can add your project details">
               <div class="things-to-do__img add-project-img">
                 <img src="../../../assets/images/Add-Project.png" alt="" class="img-fluid" />
               </div>
               <h6 class="mb-0">Add Project</h6>
             </div>
 
-            <div class="things-to-do__icons text-center cursor" (click)="openBomDialog()" matTooltip="You can create your BOM of materials">
+            <div class="things-to-do__icons text-center cursor" (click)="openBomDialog()"
+              matTooltip="You can create your BOM of materials">
               <div class="things-to-do__img">
                 <img src="../../../assets/images/BOM.png" alt="" class="img-fluid" />
               </div>
               <h6 class="mb-0">Create BOM</h6>
             </div>
 
-            <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor" [routerLink]="['/rfq/createRfq']" matTooltip="You can create your RFQs">
+            <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor"
+              [routerLink]="['/rfq/createRfq']" matTooltip="You can create your RFQs">
               <div class="things-to-do__img">
                 <img src="../../../assets/images/RFQ.png" alt="" class="img-fluid" />
               </div>
               <h6 class="mb-0">Create RFQ</h6>
             </div>
 
-            <div
-              *ngIf="permissionObj.rfqFlag"
-              class="things-to-do__icons text-center cursor"
-              [routerLink]="['/globalStore/' + orgId]"
-              matTooltip="You can check your material details"
-            >
+            <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor"
+              [routerLink]="['/globalStore/' + orgId]" matTooltip="You can check your material details">
               <div class="things-to-do__img">
                 <img src="../../../assets/images/global-store.png" alt="Global Store" class="img-fluid" />
               </div>
               <h6 class="mb-0">Global Store</h6>
             </div>
 
-            <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor" [routerLink]="['/po/initiate-po']" matTooltip="You can create your P.O.">
+            <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor"
+              [routerLink]="['/po/initiate-po']" matTooltip="You can create your P.O.">
               <div class="things-to-do__img">
                 <img src="../../../assets/images/PO.png" alt="" class="img-fluid" />
               </div>
@@ -65,7 +65,8 @@
                                                 <img src="assets/images/icon1.png" alt="Awarded Purchase Order" class="img-fluid">
                                             </div> -->
                       <div class="stats__content">
-                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/po']" *ngIf="poData.totalCount">{{ poData?.totalCount }}</h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/po']" *ngIf="poData.totalCount">
+                          {{ poData?.totalCount }}</h2>
                         <h2 class="mb-1 cursor-pointer" [routerLink]="['/po']" *ngIf="!poData.totalCount">0</h2>
                         <p class="mb-0">Awarded Purchase Order</p>
                       </div>
@@ -76,8 +77,13 @@
                                                 <img src="assets/images/po-amount-icon.png" alt="Awarded PO Amount" class="img-fluid">
                                             </div> -->
                       <div class="stats__content">
-                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/po']" *ngIf="poData.totalValue">₹ {{ poData?.totalValue | number }}</h2>
-                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/po']" *ngIf="!poData.totalValue">₹ 0</h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/po']" *ngIf="poData.totalValue">
+                          <ng-container *ngIf="currencyCode">{{currencyCode}}</ng-container>
+                          {{ poData?.totalValue | number }}
+                        </h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/po']" *ngIf="!poData.totalValue">
+                          <ng-container *ngIf="currencyCode">{{currencyCode}}</ng-container> 0
+                        </h2>
                         <p class="mb-0">Awarded P.O. Amount</p>
                       </div>
                     </div>
@@ -91,7 +97,8 @@
                                                 <img src="assets/images/icon6.png" alt="Awarded Purchase Order" class="img-fluid">
                                             </div> -->
                       <div class="stats__content">
-                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/rfq']" *ngIf="rfqData.totalCount">{{ rfqData?.totalCount }}</h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/rfq']" *ngIf="rfqData.totalCount">
+                          {{ rfqData?.totalCount }}</h2>
                         <h2 class="mb-1 cursor-pointer" [routerLink]="['/rfq']" *ngIf="!rfqData.totalCount">0</h2>
                         <p class="mb-0">Number of RFQ</p>
                       </div>
@@ -102,8 +109,13 @@
                                                 <img src="assets/images/po-amount-icon.png" alt="Awarded PO Amount" class="img-fluid">
                                             </div> -->
                       <div class="stats__content">
-                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/rfq']" *ngIf="rfqData.totalValue">₹ {{ rfqData?.totalValue | number: "1.2-2" }}</h2>
-                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/rfq']" *ngIf="!rfqData.totalValue">₹ 0</h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/rfq']" *ngIf="rfqData.totalValue">
+                          <ng-container *ngIf="currencyCode">{{currencyCode}}</ng-container>
+                          {{ rfqData?.totalValue | number: "1.2-2" }}
+                        </h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/rfq']" *ngIf="!rfqData.totalValue">
+                          <ng-container *ngIf="currencyCode">{{currencyCode}}</ng-container> 0
+                        </h2>
                         <p class="mb-0">RFQ Amount</p>
                       </div>
                     </div>
@@ -144,18 +156,21 @@
                   <mat-label>Select Project</mat-label>
                   <mat-select formControlName="projectFilter" multiple>
                     <div class="display-flex">
-                      <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search project Name" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
+                      <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search project Name"
+                        [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
                       <button mat-button matSuffix mat-icon-button>
                         <mat-icon>search</mat-icon>
                       </button>
                     </div>
-                    <mat-option *ngFor="let project of allProjects | SearchPipe: searchText:'projectName'" [value]="project">{{ project.projectName }} </mat-option>
+                    <mat-option *ngFor="let project of allProjects | SearchPipe: searchText:'projectName'"
+                      [value]="project">{{ project.projectName }} </mat-option>
                   </mat-select>
                 </mat-form-field>
               </form>
             </div>
             <div class="col-xs-3 p-r-0 p-l-20 widthWrapper customDatePicker">
-              <ngx-mat-drp class="border-input" (selectedDateRangeChanged)="updateRange($event)" [options]="options" #dateRangePicker></ngx-mat-drp>
+              <ngx-mat-drp class="border-input" (selectedDateRangeChanged)="updateRange($event)" [options]="options"
+                #dateRangePicker></ngx-mat-drp>
             </div>
             <!-- <app-range-datePicker></app-range-datePicker> -->
           </div>
