--- a/src/app/shared/dialogs/payment-record/paymentRecord.component.html
+++ b/src/app/shared/dialogs/payment-record/paymentRecord.component.html
@@ -15,25 +15,32 @@
     <mat-card class="width78Percent gray-border" *ngIf="paymentDetail">
       <div class="row">
         <div class="col-xs-6">
-          Total PO Amount : {{ paymentDetail.poAmount ? (paymentDetail.poAmount | number: "1.2-2") : (0 | number: "1.2-2") }}
-          <span class="info-icon info-tootip"
-            ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
+          Total PO Amount :
+          {{ paymentDetail.poAmount ? (paymentDetail.poAmount | number: "1.2-2") : (0 | number: "1.2-2") }}
+          <span class="info-icon info-tootip"><img src="./../../../../assets/images/i_icon.png"
+              class="img-responsive" />
             <span class="info-tootip__content">
               <div class="tooltip-table">
                 <p class="row mb-1">
-                  <span class="col-sm-12">Total Amount : {{ paymentDetail.poAmount - paymentDetail.gstAmount | number: "1.2-2" }}</span>
-                  <span class="col-sm-12">GST Amount : {{ paymentDetail.gstAmount ? (paymentDetail.gstAmount | number: "1.2-2") : (0 | number: "1.2-2") }}</span>
+                  <span class="col-sm-12">Total Amount :
+                    {{ paymentDetail.poAmount - paymentDetail.gstAmount | number: "1.2-2" }}</span>
+                  <span class="col-sm-12">GST Amount :
+                    {{ paymentDetail.gstAmount ? (paymentDetail.gstAmount | number: "1.2-2") : (0 | number: "1.2-2") }}</span>
                 </p>
               </div>
             </span>
           </span>
         </div>
 
-        <div class="col-xs-6">Amount Paid till date : {{ paymentDetail.paymentRecived ? (paymentDetail.paymentRecived | number: "1.2-2") : (0 | number: "1.2-2") }}</div>
+        <div class="col-xs-6">Amount Paid till date :
+          {{ paymentDetail.paymentRecived ? (paymentDetail.paymentRecived | number: "1.2-2") : (0 | number: "1.2-2") }}
+        </div>
       </div>
       <div class="row">
-        <div class="col-xs-6">GRN Amount : {{ paymentDetail.grnAmount ? (paymentDetail.grnAmount | number: "1.2-2") : (0 | number: "1.2-2") }}</div>
-        <div class="col-xs-6">Amount Due : {{ paymentDetail.poAmount - paymentDetail.paymentRecived | number: "1.2-2" }}</div>
+        <div class="col-xs-6">GRN Amount :
+          {{ paymentDetail.grnAmount ? (paymentDetail.grnAmount | number: "1.2-2") : (0 | number: "1.2-2") }}</div>
+        <div class="col-xs-6">Amount Due : {{ paymentDetail.poAmount - paymentDetail.paymentRecived | number: "1.2-2" }}
+        </div>
       </div>
     </mat-card>
   </div>
@@ -44,21 +51,14 @@
           <div class="row width100Percent">
             <div class="col-xs-4">
               <mat-form-field class="border-input width-90">
-                <input formControlName="amountPaid" appTwoDigitDecimaNumber matInput type="text" placeholder="Amount Paid*" />
+                <input formControlName="amountPaid" appTwoDigitDecimaNumber matInput type="text"
+                  placeholder="Amount Paid*" />
               </mat-form-field>
             </div>
             <div class="col-xs-4">
               <mat-form-field class="border-input">
-                <input
-                  matInput
-                  [min]="startDate"
-                  [max]="endDate"
-                  [matDatepicker]="dueDate"
-                  placeholder="Date of Payment*"
-                  formControlName="paymentDate"
-                  (click)="dueDate.open()"
-                  readonly
-                />
+                <input matInput [min]="startDate" [max]="endDate" [matDatepicker]="dueDate"
+                  placeholder="Date of Payment*" formControlName="paymentDate" (click)="dueDate.open()" readonly />
                 <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
                 <mat-datepicker #dueDate startView="month" [startAt]="startDate"></mat-datepicker>
               </mat-form-field>
@@ -66,7 +66,8 @@
             <div class="col-xs-4 text-center">
               <span>
                 <mat-form-field class="border-input width-90">
-                  <input formControlName="transactionId" appTwoDigitDecimaNumber matInput type="text" placeholder="Transaction ID" />
+                  <input formControlName="transactionId" appTwoDigitDecimaNumber matInput type="text"
+                    placeholder="Transaction ID" />
                 </mat-form-field>
               </span>
             </div>
